<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ekzhu.warcraftquiz.MainActivity">

    <ImageView
        style="@style/bg"
        android:src="@drawable/back" />

    <ScrollView
        android:id="@+id/scroll_view_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Logo"
                style="@style/Logo"
                android:src="@drawable/wowlogo" />

            <android.support.v7.widget.CardView

                style="@style/card.ord">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q1" />

                    <LinearLayout style="@style/Linear_layout.answers">

                        <RadioGroup
                            android:id="@+id/Q1"
                            style="@style/radio">

                            <RadioButton
                                android:id="@+id/Q1A1"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q1a1" />

                            <RadioButton
                                android:id="@+id/Q1A2"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q1a2" />

                            <RadioButton
                                android:id="@+id/Q1A3"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q1a3" />

                            <RadioButton
                                android:id="@+id/Q1A4"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q1a4" />

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.q2">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q2" />

                    <LinearLayout style="@style/Linear_layout.answers">

                        <RadioGroup
                            android:id="@+id/Q2"
                            style="@style/radio">

                            <RadioButton
                                android:id="@+id/Q2A1"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q2a1" />

                            <RadioButton
                                android:id="@+id/Q2A2"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q2a2" />

                            <RadioButton
                                android:id="@+id/Q2A3"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q2a3" />

                            <RadioButton
                                android:id="@+id/Q2A4"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q2a4" />

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.ord">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q3" />

                    <LinearLayout style="@style/Linear_layout.checkbox">


                        <CheckBox
                            android:id="@+id/Q3A1"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q3a1" />

                        <CheckBox
                            android:id="@+id/Q3A2"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q3a2" />

                        <CheckBox
                            android:id="@+id/Q3A3"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q3a3" />

                        <CheckBox
                            android:id="@+id/Q3A4"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q3a4" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.q4">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q4" />

                    <EditText
                        android:id="@+id/Q4A"
                        style="@style/Edit_text"
                        android:hint="@string/q4_hint" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.ord">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q5" />

                    <LinearLayout style="@style/Linear_layout.checkbox">


                        <CheckBox
                            android:id="@+id/Q5A1"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q5a1" />

                        <CheckBox
                            android:id="@+id/Q5A2"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q5a2" />

                        <CheckBox
                            android:id="@+id/Q5A3"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q5a3" />

                        <CheckBox
                            android:id="@+id/Q5A4"
                            style="@style/header.answer"
                            android:onClick="isClicked"
                            android:text="@string/q5a4" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.ord">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q6" />

                    <LinearLayout style="@style/Linear_layout.answers">

                        <RadioGroup
                            android:id="@+id/Q6"
                            style="@style/radio">

                            <RadioButton
                                android:id="@+id/Q6A1"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q6a1" />

                            <RadioButton
                                android:id="@+id/Q6A2"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q6a2" />

                            <RadioButton
                                android:id="@+id/Q6A3"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q6a3" />

                            <RadioButton
                                android:id="@+id/Q6A4"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q6a4" />

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.ord">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q7" />

                    <LinearLayout style="@style/Linear_layout.answers">

                        <RadioGroup
                            android:id="@+id/Q7"
                            style="@style/radio">

                            <RadioButton
                                android:id="@+id/Q7A1"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q7a1" />

                            <RadioButton
                                android:id="@+id/Q7A2"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q7a2" />

                            <RadioButton
                                android:id="@+id/Q7A3"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q7a3" />

                            <RadioButton
                                android:id="@+id/Q7A4"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q7a4" />

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.q8">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q8" />

                    <EditText
                        android:id="@+id/Q8A"
                        style="@style/Edit_text"
                        android:hint="@string/q8_hint" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.q9">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q9" />

                    <LinearLayout style="@style/Linear_layout.answers">

                        <RadioGroup
                            android:id="@+id/Q9"
                            style="@style/radio">

                            <RadioButton
                                android:id="@+id/Q9A1"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q9a1" />

                            <RadioButton
                                android:id="@+id/Q9A2"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q9a2" />

                            <RadioButton
                                android:id="@+id/Q9A3"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q9a3" />

                            <RadioButton
                                android:id="@+id/Q9A4"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q9a4" />

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/card.ord">

                <ImageView style="@style/Old_paper" />

                <LinearLayout style="@style/Linear_layout.questions">

                    <TextView
                        style="@style/header.question"
                        android:text="@string/q10" />

                    <LinearLayout style="@style/Linear_layout.answers">

                        <RadioGroup
                            android:id="@+id/Q10"
                            style="@style/radio">

                            <RadioButton
                                android:id="@+id/Q10A1"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q10a1" />

                            <RadioButton
                                android:id="@+id/Q10A2"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q10a2" />

                            <RadioButton
                                android:id="@+id/Q10A3"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q10a3" />

                            <RadioButton
                                android:id="@+id/Q10A4"
                                style="@style/header.answer"
                                android:onClick="isClicked"
                                android:text="@string/q10a4" />

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/score"
                style="@style/score"
                android:onClick="displayResults"
                android:text="@string/score" />

            <Button
                android:id="@+id/reset"
                style="@style/score"
                android:onClick="scoreReset"
                android:text="@string/reset" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
